# DC_partybot

./: .cache  .dockerignore  .env.example  .gitignore  .replit  DOCKER_GUIDE.md  Dockerfile  FIX_SUMMARY.md  Makefile  README.md  SETUP_GUIDE.md  UV_FEATURES_USED.md  config.py  docker-compose.yml  docker.bat  emoji_cog.py  emoji_data.json  fly.toml  main.py  music_cog.py  nixpacks.toml  pa_starter.py  pyproject.toml  railway.toml  requirements.txt  scripts.ps1  setup_ffmpeg.sh  spotify.py  start.sh  utility_cog.py  utils_cog.py  youtube.cookies
cogs/: music_commands.py  utility_commands.py
data/: emoji_data.json
music/: player.py  queue.py  youtube.py
utils/: reminders.py  tenor.py
